assets/Layout/Footer.scss
@import './Variables';
@import './Mixins';

html,
body {
  min-height: 100vh;
  display: flex;
  flex-direction: column;
}

.page-content {
  padding: 0.75rem;
  margin-bottom: 1.25rem;
}

.footer {
  margin-top: auto;
  padding: 1rem;
  color: $footer-color;
  background-color: $footer-background-color;

  @media (width >= 768px) {
    padding: 2rem;
  }

  a {
    color: inherit;
    text-decoration: underline;

    &:hover {
      color: var(--primary);
    }
  }

  .footer-links {
    a {
      font-size: 0.9rem;
      transition: color 0.3s ease;
      text-decoration: none;

      &:hover {
        color: var(--primary);
      }

      &:not(:first-child) {
        margin-left: 0.5rem;
      }
    }
  }

  .footer-copyright {
    font-size: 0.9rem;
  }
}

.footer-download {
  padding-top: 2rem;
  padding-bottom: 2rem;
  a {
    text-decoration: none;

    img {
      margin-top: 0.3rem;
    }
  }
}

